# bevy_nine_slice_ui

./: Cargo.toml  README.md
examples/: ui.rs
src/: lib.rs  nine_slice.wgsl
