[package]
name = "bevy_nine_slice_ui"
version = "0.4.0"
edition = "2021"
authors = ["Lorenz Mielke"]
description = "A nine slice/patch texture plugin for bevy ui nodes, works in wasm"
keywords = ["bevy", "ui", "nine", "patch", "slice"]
repository = "https://github.com/Lommix/bevy_nine_slice_ui"
license = "MIT"

[dependencies]
bevy = "0.12.1"
