[package]
name = "bevy_nine_slice_ui"
version = "0.7.0"
edition = "2021"
authors = ["Lorenz Mielke"]
description = "A nine slice/patch texture plugin for bevy ui nodes, works in wasm"
keywords = ["bevy", "ui", "nine", "patch", "slice"]
repository = "https://github.com/Lommix/bevy_nine_slice_ui"
license = "MIT"

[dependencies.bevy]
version = "0.14.0"
default-features = false
features = ["bevy_render", "bevy_ui", "bevy_asset"]

[dev-dependencies]
bevy = "0.14"
